#2 - Adicionada a lib de Intro Slider

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "intl": "^1.2.5",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-app-intro-slider": "^4.0.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "^1.7.1",
