--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "prettier": "^1.18.2",
     "prettier-eslint": "^9.0.0",
     "react-native-rename": "^2.4.1",
-    "react-test-renderer": "16.11.0"
+    "react-test-renderer": "16.11.0",
+    "reactotron-react-native": "^5.0.0"
   },
   "jest": {
     "preset": "react-native"
