--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/bottom-tabs": "^5.2.7",
+    "@react-navigation/drawer": "^5.5.1",
     "@react-navigation/material-bottom-tabs": "^5.1.9",
+    "@react-navigation/material-top-tabs": "^5.1.10",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
     "axios": "^0.19.2",
     "intl": "^1.2.5",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-app-intro-slider": "^4.0.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
@@ -45,7 +50,8 @@
     "prettier": "^1.18.2",
     "prettier-eslint": "^9.0.0",
     "react-native-rename": "^2.4.1",
-    "react-test-renderer": "16.11.0"
+    "react-test-renderer": "16.11.0",
+    "reactotron-react-native": "^5.0.0"
   },
   "jest": {
     "preset": "react-native"
