--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,11 +129,11 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.isusapp"
+        applicationId "com.esp.isus"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "2.1.0"
     }
     splits {
         abi {
