--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-render-html": "^4.2.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-simple-toast": "^1.1.2",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
