--- a/ios/isusapp/Info.plist
+++ b/ios/isusapp/Info.plist
@@ -63,6 +63,12 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
-</dict>
+  <false/>
+  <key> LSSupportsOpeningDocumentsInPlace </key>
+  <true/>
+  <key> UISupportsDocumentBrowser </key>
+  <true/>
+  <key> UIFileSharingEnabled </key>
+  <true/>	
+  </dict>
 </plist>
