--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.62.2",
     "react-native-app-intro-slider": "^4.0.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-picker": "^2.3.1",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.7.1",
     "react-native-render-html": "^4.2.0",
