159 :wrench: Adiciona keys de permissao no iOS

--- a/ios/isusapp-tvOS/Info.plist
+++ b/ios/isusapp-tvOS/Info.plist
@@ -49,5 +49,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>$(PRODUCT_NAME) requer acesso à biblioteca de imagens.</string>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>$(PRODUCT_NAME) requer acesso à sua localização.</string>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>$(PRODUCT_NAME) requer acesso à sua localização.</string>
 </dict>
 </plist>
