--- a/ios/isusappTests/Info.plist
+++ b/ios/isusappTests/Info.plist
@@ -22,5 +22,9 @@
 	<string>1</string>
   <key>NSPhotoLibraryUsageDescription</key>
   <string>$(PRODUCT_NAME) requer acesso à biblioteca de imagens.</string>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>$(PRODUCT_NAME) requer acesso à sua localização.</string>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>$(PRODUCT_NAME) requer acesso à sua localização.</string>
 </dict>
 </plist>
