--- a/ios/isusapp/Info.plist
+++ b/ios/isusapp/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key> LSSupportsOpeningDocumentsInPlace </key>
+	<true/>
+	<key> UIFileSharingEnabled </key>
+	<true/>
+	<key> UISupportsDocumentBrowser </key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -52,6 +58,10 @@
 		<string>Entypo.ttf</string>
 		<string>MaterialCommunityIcons.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -63,12 +73,6 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-  <false/>
-  <key> LSSupportsOpeningDocumentsInPlace </key>
-  <true/>
-  <key> UISupportsDocumentBrowser </key>
-  <true/>
-  <key> UIFileSharingEnabled </key>
-  <true/>	
-  </dict>
+	<false/>
+</dict>
 </plist>
