#105 - :green_apple: Implementa DeepLinking no iOS

--- a/ios/isusapp/Info.plist
+++ b/ios/isusapp/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key> LSSupportsOpeningDocumentsInPlace </key>
+	<true/>
+	<key> UIFileSharingEnabled </key>
+	<true/>
+	<key> UISupportsDocumentBrowser </key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -20,6 +26,19 @@
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>coronavirus</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>https://coronavirus.ceara.gov.br/</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -37,8 +56,12 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>$(PRODUCT_NAME) requer acesso à sua localização.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>$(PRODUCT_NAME) requer acesso à sua localização.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) requer acesso à biblioteca de imagens.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>MaterialIcons.ttf</string>
@@ -67,18 +90,6 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-  <false/>
-  <key> LSSupportsOpeningDocumentsInPlace </key>
-  <true/>
-  <key> UISupportsDocumentBrowser </key>
-  <true/>
-  <key> UIFileSharingEnabled </key>
-  <true/>
-  <key>NSPhotoLibraryUsageDescription</key>
-  <string>$(PRODUCT_NAME) requer acesso à biblioteca de imagens.</string>
-  <key>NSLocationAlwaysUsageDescription</key>
-  <string>$(PRODUCT_NAME) requer acesso à sua localização.</string>
-  <key>NSLocationWhenInUseUsageDescription</key>
-  <string>$(PRODUCT_NAME) requer acesso à sua localização.</string>
+	<false/>
 </dict>
 </plist>
