--- a/ios/Podfile
+++ b/ios/Podfile
@@ -77,6 +77,9 @@ target 'isusapp' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  # CodePush plugin dependency
+  pod 'CodePush', :path => '../node_modules/react-native-code-push'
+
   target 'isusappTests' do
     inherit! :complete
     # Pods for testing
