--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@react-navigation/material-top-tabs": "^5.1.10",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
+    "appcenter": "3.0.3",
+    "appcenter-analytics": "3.0.3",
+    "appcenter-crashes": "3.0.3",
     "axios": "^0.19.2",
     "intl": "^1.2.5",
     "moment": "^2.25.3",
