#141 :apple: Adiciona uma nova chave para acessar a key do deployment

--- a/ios/isusapp/Info.plist
+++ b/ios/isusapp/Info.plist
@@ -28,6 +28,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>CodePushDeploymentKey</key>
+	<string>usV-VwPza6bK3TYUX81P3oa-Z5p4skSk74HLF</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
