--- a/ios/isusapp/Info.plist
+++ b/ios/isusapp/Info.plist
@@ -29,7 +29,7 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>CodePushDeploymentKey</key>
-	<string>usV-VwPza6bK3TYUX81P3oa-Z5p4skSk74HLF</string>
+	<string>$(CODEPUSH_KEY)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
