#57 - :green_apple: Conserta aparência da barra inferior na tela de educação e pesquisa

--- a/ios/isusapp/Info.plist
+++ b/ios/isusapp/Info.plist
@@ -59,6 +59,7 @@
 		<string>FontAwesome5_Solid.ttf</string>
 		<string>EvilIcons.ttf</string>
 		<string>AntDesign.ttf</string>
+    <string>SimpleLineIcons.ttf </string>
 		<string>Entypo.ttf</string>
 		<string>MaterialCommunityIcons.ttf</string>
 	</array>
