--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "7.14.2",
+    "gitmoji-cli": "^3.2.6",
     "husky": "^3.0.9",
     "jest": "^25.2.4",
     "metro-config": "^0.59.0",
