--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-config": "^1.2.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
+    "react-native-material-dropdown-v2": "0.11.1",
     "react-native-onesignal": "^3.7.3",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.7.1",
