--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iSUS",
-  "version": "3.5.2",
+  "version": "3.6.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -54,6 +54,7 @@
     "@babel/core": "^7.9.0",
     "@babel/runtime": "^7.9.2",
     "@react-native-community/eslint-config": "^1.0.0",
+    "appcenter-cli": "^2.6.3",
     "babel-jest": "^25.2.4",
     "editorconfig": "^0.15.3",
     "eslint": "^6.8.0",
