--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 ONE_SIGNAL_KEY=oneSignalKey
 ONE_SIGNAL_PROJECT_NUMBER=oneSignalProjectNumber
+
+KEYCLOAK_URL=https://dev.id.org.br/auth/
+KEYCLOAK_REALM=saude
+KEYCLOAK_CLIENT_ID=isus
+KEYCLOAK_REDIRECT_URI=isusapp://isusapp/secured/profile
+KEYCLOAK_APPSITE_URI=isusapp://
