--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "16.11.0",
     "react-content-loader": "^5.0.4",
     "react-fade-in": "^1.1.0",
+    "react-hook-form": "6.3.1",
     "react-native": "0.62.2",
     "react-native-app-intro-slider": "^4.0.2",
     "react-native-code-push": "^6.2.1",
