--- a/ios/isusapp/Info.plist
+++ b/ios/isusapp/Info.plist
@@ -2,6 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+
+		<string>twitter</string>
+		<string>twitterauth</string>
+
+		<string>linkedin</string>
+		<string>linkedin-sdk2</string>
+		<string>linkedin-sdk</string>
+
+	</array>
 	<key> LSSupportsOpeningDocumentsInPlace </key>
 	<true/>
 	<key> UIFileSharingEnabled </key>
@@ -74,7 +89,7 @@
 		<string>FontAwesome5_Solid.ttf</string>
 		<string>EvilIcons.ttf</string>
 		<string>AntDesign.ttf</string>
-		<string>SimpleLineIcons.ttf </string>
+		<string>SimpleLineIcons.ttf</string>
 		<string>Entypo.ttf</string>
 		<string>MaterialCommunityIcons.ttf</string>
 	</array>
