#270 :heavy_plus_sign: Adiciona dependência para decodificar JWT

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "appcenter-crashes": "3.0.3",
     "axios": "^0.19.2",
     "intl": "^1.2.5",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.25.3",
     "react": "16.11.0",
     "react-content-loader": "^5.0.4",
