--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-testing-library": "^2.1.0",
+    "react-native-text-input-mask": "^2.0.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^9.4.0",
     "rn-fetch-blob": "^0.12.0",
