#278 - ✨ adiciona deep link no info.plist

--- a/ios/isusapp/Info.plist
+++ b/ios/isusapp/Info.plist
@@ -8,6 +8,7 @@
 		<string>fb-messenger-share-api</string>
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
+		<string>fb</string>
 
 		<string>twitter</string>
 		<string>twitterauth</string>
@@ -16,6 +17,10 @@
 		<string>linkedin-sdk2</string>
 		<string>linkedin-sdk</string>
 
+		<string>youtube</string>
+		<string>vnd.youtube</string>
+
+		<string>instagram</string>
 	</array>
 	<key> LSSupportsOpeningDocumentsInPlace </key>
 	<true/>
