#308 :wrench: Divide .env em 2 ambientes e ajusta requisição

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -1,10 +1,4 @@
 ONE_SIGNAL_KEY=oneSignalKey
 ONE_SIGNAL_PROJECT_NUMBER=oneSignalProjectNumber
-
-KEYCLOAK_URL=
-KEYCLOAK_REALM=
-KEYCLOAK_CLIENT_ID=
-KEYCLOAK_REDIRECT_URI=
-KEYCLOAK_APPSITE_URI=
-
 CODE_PUSH_DEPLOYMENT_KEY=
+API_URL=
