--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "3.10.3",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
+    "android": "ENVFILE=.env.dev react-native run-android",
     "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/isusapp/main.jsbundle' --dev=false --platform='ios' --assets-dest='./ios'",
-    "ios": "react-native run-ios",
+    "ios": "ENVFILE=.env.dev react-native run-ios",
     "start": "react-native start",
     "fix": "yarn lint --fix",
     "test": "jest",
