--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "ENVFILE=.env.dev react-native run-android",
-    "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/isusapp/main.jsbundle' --dev=false --platform='ios' --assets-dest='./ios'",
+    "build:ios": "ENVFILE=.env.dev react-native bundle --entry-file='index.js' --bundle-output='./ios/isusapp/main.jsbundle' --dev=false --platform='ios' --assets-dest='./ios'",
     "ios": "ENVFILE=.env.dev react-native run-ios",
     "start": "react-native start",
     "fix": "yarn lint --fix",
