sem cartão - 🚀 altera código para deploy da versão 3.10.3

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,13 @@
 apply plugin: "com.android.application"
 
 import com.android.build.OutputFile
+
+project.ext.envConfigFiles = [
+    debug: ".env.dev",
+    release: ".env.prod",
+    anothercustombuild: ".env.prod",
+]
+
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 
 /**
