sem cartão - 🔧 altera env ao fazer build no Android

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,8 +4,8 @@ import com.android.build.OutputFile
 
 project.ext.envConfigFiles = [
     debug: ".env.dev",
-    release: ".env.prod",
-    anothercustombuild: ".env.prod",
+    release: ".env",
+    anothercustombuild: ".env",
 ]
 
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
