--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "android": "cross-env ENVFILE=.env.dev react-native run-android",
     "build:ios": "cross-env ENVFILE=.env.dev react-native bundle --entry-file='index.js' --bundle-output='./ios/isusapp/main.jsbundle' --dev=false --platform='ios' --assets-dest='./ios'",
     "ios": "cross-env ENVFILE=.env.dev react-native run-ios",
-    "android-prod": "cross-env ENVFILE=.env.prod react-native run-android",
-    "build:ios-prod": "cross-env ENVFILE=.env.prod react-native bundle --entry-file='index.js' --bundle-output='./ios/isusapp/main.jsbundle' --dev=false --platform='ios' --assets-dest='./ios'",
-    "ios-prod": "cross-env ENVFILE=.env.prod react-native run-ios",
+    "android-prod": "cross-env ENVFILE=.env react-native run-android",
+    "build:ios-prod": "cross-env ENVFILE=.env react-native bundle --entry-file='index.js' --bundle-output='./ios/isusapp/main.jsbundle' --dev=false --platform='ios' --assets-dest='./ios'",
+    "ios-prod": "cross-env ENVFILE=.env react-native run-ios",
     "start": "react-native start",
     "fix": "yarn lint --fix",
     "test": "jest",
