--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^9.4.0",
     "rn-fetch-blob": "^0.12.0",
-    "rn-placeholder": "^3.0.1"
+    "rn-placeholder": "^3.0.1",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -102,5 +103,8 @@
   },
   "transform": {
     "^.+\\.jsx?$": "babel-jest"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
