--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:label="@string/app_name"
         android:screenOrientation="portrait"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
-        android:windowSoftInputMode="adjustResize"
+        android:windowSoftInputMode="adjustResize" 
+        android:resizeableActivity="false"
         android:launchMode="singleTask">
         <intent-filter>
           <action android:name="android.intent.action.MAIN" />
