--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^1.18.2",
     "prettier-eslint": "^9.0.0",
+    "react-native-fix-image": "^2.0.1",
     "react-native-rename": "^2.4.1",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "16.11.0",
