--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "react-native-snap-carousel": "^4.0.0-beta.5",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.0",
-    "react-native-testing-library": "^2.1.0",
     "react-native-text-input-mask": "^2.0.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^9.4.0",
@@ -66,6 +65,7 @@
     "@babel/core": "^7.9.0",
     "@babel/runtime": "^7.9.2",
     "@react-native-community/eslint-config": "^1.0.0",
+    "@testing-library/react-native": "^7.1.0",
     "appcenter-cli": "^2.7.1",
     "babel-jest": "^25.2.4",
     "cross-env": "^7.0.2",
