--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,9 @@ on:
 jobs:
   testes:
     name: Teste do App iSUS
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
+    env:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -18,3 +20,9 @@ jobs:
       - name: Executa Testes
         id: executaTestes
         run: yarn test
+      - name: Notificar no Slack
+        uses: act10ns/slack@v1
+        with:
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+          if: always()
