--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-material-dropdown-v2": "0.11.1",
     "react-native-onesignal": "^3.7.3",
     "react-native-paper": "^3.10.1",
+    "react-native-password-eye": "^1.0.2",
     "react-native-reanimated": "^1.7.1",
     "react-native-render-html": "^4.2.0",
     "react-native-safe-area-context": "^0.7.3",
