sem cartão - :white_check_mark: - Teste da exclusão de conta do perfil

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -80,6 +80,8 @@ target 'isusapp' do
 
   # CodePush plugin dependency
 
+  pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
+
   target 'isusappTests' do
     inherit! :complete
     # Pods for testing
