--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-community/masked-view": "^0.1.7",
     "@react-native-community/netinfo": "^5.9.7",
     "@react-native-community/toolbar-android": "^0.1.0-rc.2",
+    "@react-native-firebase/app": "^10.0.0",
     "@react-navigation/bottom-tabs": "^5.2.7",
     "@react-navigation/drawer": "^5.5.1",
     "@react-navigation/material-bottom-tabs": "^5.1.9",
