#431 - 🚩 remove a feature do Qualiquiz

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "cross-env ENVFILE=.env.dev react-native-fix-image && react-native run-ios",
     "android-prod": "cross-env ENVFILE=.env react-native run-android",
     "build:ios-prod": "cross-env ENVFILE=.env react-native bundle --entry-file='index.js' --bundle-output='./ios/isusapp/main.jsbundle' --dev=false --platform='ios' --assets-dest='./ios'",
-    "ios-prod": "cross-env ENVFILE=.env react-native-fix-image react-native run-ios",
+    "ios-prod": "cross-env ENVFILE=.env react-native-fix-image && react-native run-ios",
     "start": "react-native start",
     "fix": "yarn lint --fix",
     "test": "jest",
