#412 - 🔧 separa ambientes local(debug) e produção do Firebase Analytics e Crashlytics

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -202,10 +202,11 @@ android {
 }
 
 dependencies {
+    implementation 'com.facebook.soloader:soloader:0.9.0+'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
-	implementation project(':react-native-config')
+	  implementation project(':react-native-config')
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
