--- a/ios/isusapp.xcodeproj/xcshareddata/xcschemes/isusapp.xcscheme
+++ b/ios/isusapp.xcodeproj/xcshareddata/xcschemes/isusapp.xcscheme
@@ -60,6 +60,12 @@
             ReferencedContainer = "container:isusapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
