--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "3.13.4",
   "private": true,
   "scripts": {
-    "android": "cross-env ENVFILE=.env.dev react-native run-android",
+    "android": "cross-env ENVFILE=.env.dev react-native run-android --variant debug",
     "build:ios": "cross-env ENVFILE=.env.dev react-native bundle --entry-file='index.js' --bundle-output='./ios/isusapp/main.jsbundle' --dev=false --platform='ios' --assets-dest='./ios'",
-    "ios": "cross-env ENVFILE=.env.dev react-native-fix-image && react-native run-ios",
+    "ios": "cross-env ENVFILE=.env.dev react-native-fix-image && react-native run-ios --configuration debug",
     "android-prod": "cross-env ENVFILE=.env react-native run-android",
     "build:ios-prod": "cross-env ENVFILE=.env react-native bundle --entry-file='index.js' --bundle-output='./ios/isusapp/main.jsbundle' --dev=false --platform='ios' --assets-dest='./ios'",
     "ios-prod": "cross-env ENVFILE=.env react-native-fix-image && react-native run-ios",
@@ -13,7 +13,8 @@
     "fix": "yarn lint --fix",
     "test": "jest",
     "lint": "eslint .",
-    "post-version": "react-native-version"
+    "post-version": "react-native-version",
+    "clean-cache-android": "cd android && ./gradlew clean && ./gradlew cleanBuildCache && cd .."
   },
   "dependencies": {
     "@paralleldrive/feature-toggles": "^1.0.4",
