--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-native-firebase/analytics": "^10.1.0",
     "@react-native-firebase/app": "^10.1.0",
     "@react-native-firebase/crashlytics": "^10.1.0",
+    "@react-native-picker/picker": "^1.9.12",
     "@react-navigation/bottom-tabs": "^5.2.7",
     "@react-navigation/drawer": "^5.5.1",
     "@react-navigation/material-bottom-tabs": "^5.1.9",
@@ -54,6 +55,7 @@
     "react-native-onesignal": "^3.7.3",
     "react-native-paper": "^3.10.1",
     "react-native-password-eye": "^1.0.2",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.7.1",
     "react-native-render-html": "^4.2.0",
     "react-native-safe-area-context": "^0.7.3",
