--- a/ios/Podfile
+++ b/ios/Podfile
@@ -110,3 +110,10 @@ target 'OneSignalNotificationServiceExtension' do
   pod 'OneSignal', '>= 2.6.2', '< 3.0'
 end
 
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
+    end
+  end
+end
