🐛 Corrigindo os deprecated do Onesignal ao atualizar o pacote.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -240,3 +240,19 @@ task copyDownloadableDepsToLibs(type: Copy) {
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 
+/////////////////////////////////////////////////////////////////////////////
+///    Configuração inicial do onesignal de acordo com a documentação     ///
+/////////////////////////////////////////////////////////////////////////////
+buildscript {
+    repositories {
+        gradlePluginPortal()
+    }
+    dependencies {
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.10, 0.99.99]'
+    }
+}
+
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+/////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////
