--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,7 +143,7 @@ android {
         applicationId "com.esp.isus"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 197
+        versionCode 198
         versionName "3.17.6"
         resValue "string", "build_config_package", "com.esp.isus"
         manifestPlaceholders = [onesignal_app_id: project.env.get("ONE_SIGNAL_KEY"), onesignal_google_project_number: project.env.get("ONE_SIGNAL_PROJECT_NUMBER")]
@@ -240,3 +240,19 @@ task copyDownloadableDepsToLibs(type: Copy) {
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 
+/////////////////////////////////////////////////////////////////////////////
+///    Configuração inicial do onesignal de acordo com a documentação     ///
+/////////////////////////////////////////////////////////////////////////////
+buildscript {
+    repositories {
+        gradlePluginPortal()
+    }
+    dependencies {
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.10, 0.99.99]'
+    }
+}
+
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+/////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////
