--- a/ios/Podfile
+++ b/ios/Podfile
@@ -92,14 +92,13 @@ target 'isusapp' do
   add_flipper_pods!
   post_install do |installer|
     flipper_post_install(installer)
-#    installer.pods_project.targets.each do |target|
-#      target.build_configurations.each do |config|
-#        config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
-#      end
-#    end
-    # installer.pods_project.build_configurations.each do |config|
-    #   config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
-    # end
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        if Gem::Version.new('10.0') > Gem::Version.new(config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'])
+          config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '10.0'
+        end
+      end
+    end
   end
 end
 
