--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-text-input-mask": "^2.0.0",
-    "react-native-tracking-transparency": "^0.1.1",
+    "react-native-tracking-transparency": "0.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^11.6.2",
     "rn-fetch-blob": "^0.12.0",
