--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,9 @@
+# Arquivos ignorados pelo eslint
 babel.config.js
 jest.config.js
 jest.setup.js
-__tests__/
+metro.config.js
+
+# pastas ignoradas pelo eslint
+__tests__/*
+__mocks__/*
