--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
   "plugins": ["react"],
   "rules": {
     "indent": ["error", 2],
-    "linebreak-style": ["error", "unix"],
+    "linebreak-style": "off",
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
     "react/prop-types": "off",
