--- a/.editorconfig
+++ b/.editorconfig
@@ -8,3 +8,7 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 quote_type = single
+
+# Windows files
+[*.bat]
+end_of_line = crlf
