--- a/ios/isusapp.xcodeproj/xcshareddata/xcschemes/isusapp.xcscheme
+++ b/ios/isusapp.xcodeproj/xcshareddata/xcschemes/isusapp.xcscheme
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1240"
+   LastUpgradeVersion = "1210"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
+      parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "iSUS.app"
-               BlueprintName = "isusapp"
-               ReferencedContainer = "container:isusapp.xcodeproj">
+               BuildableName = "RnDiffApp.app"
+               BlueprintName = "RnDiffApp"
+               ReferencedContainer = "container:RnDiffApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "isusappTests.xctest"
-               BlueprintName = "isusappTests"
-               ReferencedContainer = "container:isusapp.xcodeproj">
+               BuildableName = "RnDiffAppTests.xctest"
+               BlueprintName = "RnDiffAppTests"
+               ReferencedContainer = "container:RnDiffApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,17 +55,11 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "iSUS.app"
-            BlueprintName = "isusapp"
-            ReferencedContainer = "container:isusapp.xcodeproj">
+            BuildableName = "RnDiffApp.app"
+            BlueprintName = "RnDiffApp"
+            ReferencedContainer = "container:RnDiffApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <CommandLineArguments>
-         <CommandLineArgument
-            argument = "-FIRDebugEnabled"
-            isEnabled = "YES">
-         </CommandLineArgument>
-      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -78,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "iSUS.app"
-            BlueprintName = "isusapp"
-            ReferencedContainer = "container:isusapp.xcodeproj">
+            BuildableName = "RnDiffApp.app"
+            BlueprintName = "RnDiffApp"
+            ReferencedContainer = "container:RnDiffApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
