--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iSUS",
+  "name": "isusapp",
   "version": "3.20.4",
   "private": true,
   "scripts": {
@@ -40,11 +40,11 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.25.3",
-    "react": "16.11.0",
+    "react": "17.0.2",
     "react-content-loader": "^5.0.4",
     "react-fade-in": "^1.1.0",
     "react-hook-form": "6.3.1",
-    "react-native": "0.62.2",
+    "react-native": "0.66.3",
     "react-native-app-intro-slider": "^4.0.2",
     "react-native-code-push": "^6.2.1",
     "react-native-config": "^1.2.0",
@@ -63,7 +63,7 @@
     "react-native-snap-carousel": "^4.0.0-beta.5",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.0",
-    "react-native-text-input-mask": "^2.0.0",
+    "react-native-text-input-mask": "^3.1.4",
     "react-native-tracking-transparency": "0.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^11.6.2",
@@ -72,15 +72,15 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/runtime": "^7.9.2",
-    "@react-native-community/eslint-config": "^1.0.0",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
     "@testing-library/react-native": "^7.2.0",
     "appcenter-cli": "^2.7.1",
-    "babel-jest": "^25.2.4",
+    "babel-jest": "^26.6.3",
     "cross-env": "^7.0.2",
     "editorconfig": "^0.15.3",
-    "eslint": "^6.8.0",
+    "eslint": "^7.14.0",
     "eslint-config-airbnb": "17.1.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "2.18.0",
@@ -90,17 +90,17 @@
     "gitmoji-cli": "^3.2.6",
     "husky": "^3.0.9",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.2.4",
+    "jest": "^26.6.3",
     "jest-transform-stub": "^2.0.0",
     "metro-config": "^0.59.0",
-    "metro-react-native-babel-preset": "^0.59.0",
+    "metro-react-native-babel-preset": "^0.66.2",
     "prettier": "^1.18.2",
     "prettier-eslint": "^9.0.0",
     "react-native-fix-image": "^2.0.1",
     "react-native-rename": "^2.4.1",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-version": "^4.0.0",
-    "react-test-renderer": "16.11.0",
+    "react-test-renderer": "17.0.2",
     "reactotron-react-native": "^5.0.0"
   },
   "jest": {
