🚨 fixed lint warning

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,5 +30,10 @@
     "react/prop-types": "off",
     "react/display-name": "off",
     "no-console": "off"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
