💚 ajustando github actions para fazer testes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,9 @@ jobs:
       - name: Instala Dependências
         id: instalaDependencias
         run: yarn install
-      # - name: Executa Testes
-      #   id: executaTestes
-      #   run: yarn test
+      - name: Executa Testes
+        id: executaTestes
+        run: yarn test
       - name: Notificar no Slack
         uses: act10ns/slack@v1
         with:
